# lxi

./: .gitignore  README.md  pyproject.toml
codes/: .gitattributes  .gitignore  Cupid_Xray_Calibration.py  animation_test.py  compare.py  img_to_gif.py  lxi-hk-packet-reader.py  lxi-hk-packet-reader_with_a_few_mods.py  lxi-science-packet-reader.py  lxi_code_function_parallel_version_v03_unix.py  lxi_data_read.py  lxi_data_read_all.py  lxi_data_read_funcs.py  particle_trajectory_trace.py  particle_trajectory_trace_v02.py  save_images_to_pdf.py  solar_wind_conditions.py  unpacked_data_comparison.py
codes/lxi_gui/: lxi_gui_plot_routines.py  lxi_gui_v01.py  test.py
data/: output.csv  output_hk.csv  output_sci.csv  output_sci_2.csv  solar_cycle_list.csv
data/processed_data/hk/: 2022_04_21_1431_LEXI_raw_LEXI_unit_1_mcp_unit_1_eBox-1987_qudsi.csv
data/processed_data/sci/: 2022_04_29_0900_LEXI_rawunit1_mcp_unit1_eBox_1800V_sci_output.csv
data/raw_data/: .~lock.2022_03_03_1015_LEXI_Bert_Copper__NewMCP_2100_Fe55_no_gauge.csv#  .~lock.2022_03_03_1015_LEXI_HK__newMCPs_Bertan_copper_1900_no_ion_gage_hk_.csv#  .~lock.2022_03_03_1030_LEXI_raw_2100_newMCP_copper_sci_qudsi.csv#  2022_03_03_1015_LEXI_Bert_Copper__NewMCP_2100_Fe55_no_gauge.csv  2022_03_03_1015_LEXI_HK__newMCPs_Bertan_copper_1900_no_ion_gage_hk_.csv  2022_03_03_1030_LEXI_raw_2100_newMCP_copper_sci_qudsi.csv
data/raw_data/2022_04_21_1431_LEXI_HK_unit_1_mcp_unit_1_eBox_1987_hk_/: 2022_04_21_1431_LEXI_HK_unit_1_mcp_unit_1_eBox_1987_hk_.csv  (+2 more)
data/raw_data/out_path/: sci_test.csv
figures/: Untitled Diagram.drawio
(+5 files in other folders)
