[tool.poetry]
name = "lxi_particle"
version = "0.1.0"
description = "The package for tracing the particle trajectories for LEXI"
authors = ["Ramiz Qudsi <qudsiramiz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
magpylib = "^3.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
